force-app/main/default/objects/Trainee_Evaluation__c/Trainee_Evaluation__c.object-meta.xml
<CustomObject>
    <label>Trainee Evaluation In Training</label>
    <nameField>
        <displayFormat>V2TraineeEva#{00000}</displayFormat>
        <label>Trainee Evaluation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trainee Evaluations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>