force-app/main/default/objects/Trainee_Evaluation__c/fields/Evaluation_Name__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evaluation Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>New_Training_Plan__c.Name</field>
            <operation>contains</operation>
            <value>Evaluation</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>New_Training_Plan__c</referenceTo>
    <relationshipLabel>Trainee Evaluations</relationshipLabel>
    <relationshipName>Trainee_Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>