force-app/main/default/objects/Trainee_Evaluation__c/fields/Marks_Obtained__c.field-meta.xml
<CustomField>
    <fullName>Marks_Obtained__c</fullName>
    <label>Marks Obtained</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>