force-app/main/default/objects/Trainee_Evaluation__c/fields/Maximum_Marks__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Marks__c</fullName>
    <label>Maximum Marks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>