force-app/main/default/objects/Trainee_Evaluation__c/fields/Total_Percent__c.field-meta.xml
<CustomField>
    <fullName>Total_Percent__c</fullName>
    <formula>Marks_Obtained__c  /  Maximum_Marks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>