force-app/main/default/objects/Trainee_Evaluation__c/fields/Trainee_Name__c.field-meta.xml
<CustomField>
    <fullName>Trainee_Name__c</fullName>
    <label>Trainee Name</label>
    <referenceTo>Trainee__c</referenceTo>
    <relationshipLabel>Trainee Evaluations</relationshipLabel>
    <relationshipName>Trainee_Evaluations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>