force-app/main/default/objects/Trainee_Evaluation__c/fields/Training_Name__c.field-meta.xml
<CustomField>
    <fullName>Training_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Trainee_Participate__c.Trainee_Name__c</field>
            <operation>equals</operation>
            <valueField>$Source.Trainee_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Trainee_Participate__c</referenceTo>
    <relationshipLabel>Trainee Evaluations</relationshipLabel>
    <relationshipName>Trainee_Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>